# rust-fintrack-backend

./: .env  .env.example  .env.production  Cargo.toml  Dockerfile  docker-compose.yml
docs/: PERFORMANCE_OPTIMIZATION.md
migrations/: 001_create_tables.sql  002_create_transactions_table.sql  003_create_budgets_table.sql
src/: lib.rs  main.rs
src/config/: app.rs  database.rs  jwt.rs  mod.rs  redis.rs
src/handlers/: account_summary.rs  auth.rs  budget.rs  expense_analytics.rs  income_analytics.rs  pocket.rs  transaction.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/models/: account_summary.rs  auth.rs  budget.rs  expense_analytics.rs  income_analytics.rs  mod.rs  pocket.rs  transaction.rs  user.rs
src/repositories/: auth.rs  budget.rs  mod.rs  pocket.rs  transaction.rs  user.rs
src/routes/: account_summary.rs  auth.rs  budget.rs  expense_analytics.rs  income_analytics.rs  mod.rs  pocket.rs  transaction.rs  user.rs
src/services/: account_summary.rs  auth.rs  budget.rs  expense_analytics.rs  income_analytics.rs  pocket.rs  transaction.rs  user.rs
src/utils/: cache.rs  connection_monitor.rs  error.rs  mod.rs  response.rs  validation.rs
