[package]
name = "rust-fintrack-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["http2", "macros", "ws"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
bcrypt = "0.16.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
lettre = "0.11.18"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "uuid", "runtime-tokio-native-tls", "bigdecimal", "rust_decimal"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "compression-br", "limit"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }
